--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,22 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
+<br>
+<br>
+<br>
+<br>
+
+  <article>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+<div>
+  <h2><%= @article.title %></h2>
  
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
+</div>
+ 
+<div>
+  <p><%= @article.text %></p>
+  
+</div>
+</div>
+</div>
+</div>
+</article>
