--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,13 @@
-<br>
-<br>
-<br>
-<br>
+<header class="intro-header" style="background-image: url('/assets/home-bg.jpg')">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="site-heading">
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
   <article>
         <div class="container">
