--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,19 +10,20 @@
 </header>
 
   <article>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-<div>
-  <h2><%= @article.title %></h2>
- 
-</div>
- 
-<div>
-  <p><%= @article.text %></p>
-  
-</div>
-</div>
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+              <div>
+                <h2><%= @article.title %></h2>
+              </div>
+              <div>
+                <p><%= @article.text %></p>  
+              </div>
+            <%= link_to 'Edit', edit_article_path(@article) %>
+            <%= link_to 'Delete', article_path(@article),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %>
+          </div>
+  </div>
 </div>
 </article>
