--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -35,6 +35,7 @@
                 <p>
                   <%= article.text %>
                 </p>
+                <p>Posted on: <%= article.created_at.strftime('%Y-%m-%d') %></p>
              </div>
              <hr>
           <% end %>
