--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,11 +14,16 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
               <div>
-                <h2><%= @article.title %></h2>
+                <h1><%= @article.title %></h1>
               </div>
               <div>
                 <p><%= @article.text %></p>  
-              </div>
+                           <h3>Comments</h3>
+                  <%= render @article.comments %>
+                   
+                  <h3>Please comment here 請留言給我吧：</h3>
+                  <%= render 'comments/form' %>
+
             <%= link_to 'Edit', edit_article_path(@article) %>
             <%= link_to 'Delete', article_path(@article),
               method: :delete,
